# OxMinesweepers_navigation

./: README.md  empty_world.sh  jackal_setup.txt  russel'sdiagram.drawio  test_world.sh
jackal_move/goal/: CMakeLists.txt  README.md  package.xml
jackal_move/goal/src/: objective.txt  parser.py  set_goal.py  test_world_objective.txt  waypoint_parser.py
jackal_move/launch/: CMakeLists.txt  package.xml
jackal_move/launch/launch/: launch_all.launch  test_world.launch
jackal_move/launch/worlds/: test_world.sdf
jackal_move/odom/: CMakeLists.txt  README.md  package.xml
jackal_move/odom/src/: monitor_odom.py  set_odom.py
jackal_move/robot/: CMakeLists.txt
jackal_move/robot/src/: move_py.py
