<?xml version="1.0"?>
<package format="2">
  <name>launch</name>
  <version>0.0.0</version>
  <description>The launch package</description>


  <maintainer email="daoxin@todo.todo">daoxin</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>jackal_viz</depend>   
  <depend>jackal_navigation</depend>   
  <depend>position_controllers</depend>   
  <depend>goal</depend>    
  <depend>robot</depend> 
  <export>

  </export>
</package>
